0.15.2/_sources/_autosummary/baybe.searchspace.discrete.SubspaceDiscrete.rst.txt
SubspaceDiscrete
================

.. currentmodule:: baybe.searchspace.discrete

.. autoclass:: SubspaceDiscrete
   :members:                              
   :special-members: __call__
   :show-inheritance:                 
   :inherited-members:

   
   
   .. rubric:: Public methods

   .. autosummary::
   
      ~SubspaceDiscrete.__init__
   
      ~SubspaceDiscrete.empty
   
      ~SubspaceDiscrete.estimate_product_space_size
   
      ~SubspaceDiscrete.from_dataframe
   
      ~SubspaceDiscrete.from_dict
   
      ~SubspaceDiscrete.from_json
   
      ~SubspaceDiscrete.from_parameter
   
      ~SubspaceDiscrete.from_product
   
      ~SubspaceDiscrete.from_simplex
   
      ~SubspaceDiscrete.get_candidates
   
      ~SubspaceDiscrete.get_parameters_by_name
   
      ~SubspaceDiscrete.sample_subset_masks
   
      ~SubspaceDiscrete.subset_masks
   
      ~SubspaceDiscrete.to_dict
   
      ~SubspaceDiscrete.to_json
   
      ~SubspaceDiscrete.to_searchspace
   
      ~SubspaceDiscrete.transform
   
   
   

   
   
   .. rubric:: Public attributes and properties

   .. autosummary::
   
      ~SubspaceDiscrete.parameters
      ~SubspaceDiscrete.exp_rep
      ~SubspaceDiscrete.empty_encoding
      ~SubspaceDiscrete.constraints
      ~SubspaceDiscrete.comp_rep
      ~SubspaceDiscrete.comp_rep_bounds
      ~SubspaceDiscrete.comp_rep_columns
      ~SubspaceDiscrete.constraints_batch
      ~SubspaceDiscrete.is_constrained
      ~SubspaceDiscrete.is_empty
      ~SubspaceDiscrete.metadata
      ~SubspaceDiscrete.n_subsets
      ~SubspaceDiscrete.parameter_names
      ~SubspaceDiscrete.scaling_bounds
   
   